--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# VScode
+.vscode/
+
+# virtual environment
+lending-library-env
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
